# photoalbum

./: .gitignore  .gitmodules  CMakeLists.txt  install.sql  install_map.sql  licence  makefile  readme.md
doxygen/: doxygen.conf
src/: fill_container.hpp  main.cpp  photograph_api.cpp  photograph_api.hpp  photograph_db.cpp  photograph_db.hpp  server.cpp  server.hpp
src/api/: album.cpp  album.hpp  api.cpp  api.hpp  auth.cpp  auth.hpp  features.cpp  features.hpp  jpeg_data.cpp  jpeg_data.hpp  map.cpp  map.hpp  note.cpp  note.hpp  photograph.cpp  photograph.hpp  statistics.cpp  statistics.hpp
src/api/photograph/: album.cpp  jpeg_data.cpp  jpeg_data.hpp  tags.cpp  tags.hpp
src/base64/: base64.cpp  base64.hpp
src/db/: album.cpp  album.hpp  auth.cpp  auth.hpp  cache.cpp  cache.hpp  get_database.cpp  get_database.hpp  has_id.hpp  jpeg_data.cpp  jpeg_data.hpp  map.cpp  map.hpp  note.cpp  note.hpp  photograph.cpp  photograph.hpp  statistics.cpp  statistics.hpp
src/db/photograph/: album.cpp  album.hpp  jpeg_data.cpp  jpeg_data.hpp
src/exports/: exports.cpp  exports.hpp
src/jsonrpc/: auth.cpp  auth.hpp  method_type.hpp  request.hpp  result.hpp  server.cpp  server.hpp
src/os/: gazetteer.cpp  gazetteer.hpp  streetmap.cpp  streetmap.hpp
src/photoalbum/: photoalbum.cpp
src/uri/: api_call.cpp  detail.cpp  detail.hpp  http_date.cpp  http_date.hpp  insert_photograph.cpp  insert_photograph.hpp  jpeg_image.cpp  jpeg_image.hpp  jpeg_image_fullsize.cpp  jpeg_image_fullsize.hpp  map_tile_km.cpp  map_tile_km.hpp  uri_type.hpp
src/util/: scale.cpp  scale.hpp
web/: CMakeLists.txt  makefile  package.json
web/client/: albums.js  api.js  application.js  changepassword.js  css.js  filters.js  index.js  locations.js  loginform.js  map.js  newphotograph.js  noteeditor.js  notes.js  photoalbum.js  statistics.js  tags.js  util.js
web/client/ui/: albumform.js  albumlist.js  albumsform.js  collapsable.js  confirmbutton.js  daterangeselector.js  icon.js  kmtileview.js  locationlist.js  mainmenu.js  mapsearch.js  messagebox.js  newnoteform.js  note.js  notedetails.js  noteedit.js  notelist.js  photographdetailsform.js  photographfilter.js  photographform.js  photographli.js  photographlist.js  photographview.js  publishednotelist.js  statistics.js  taglist.js
web/client/ui/note/: details.js  edit.js  list.js  newnoteform.js  note.js  publishedlist.js
web/client/ui/photograph/: albumsform.js  detailsform.js  filter.js  form.js  li.js  list.js  view.js
web/client/ui/photograph/album/: form.js  list.js
web/static/: index.html
